Adjust layout of invoice list for small screens. Fix edting hours on small screens.

--- a/LanceTrack.Web/Features/Shared/styles/app.less
+++ b/LanceTrack.Web/Features/Shared/styles/app.less
@@ -34,6 +34,9 @@
     top: -50%;
 }
 
+.no-overflow {
+    overflow: hidden;
+}
 
 .col-mixin(@rules, @i: 1) when (@i =< 12) {
    .col-xs-@{i}, .col-sm-@{i} {
